@@ -154,6 +154,7 @@ wxMSW:
 - experimental wxURL implementation using WinInet functions (Hajo Kirchhoff)
 - fixed several bugs in wxNotebook with wxNB_MULTILINE style
 - accelerators are now initially hidden if appropriate (Peter Nielsen)
+- background colour of a wxComboBox may now be set
 
 wxGTK:
 
